--- a/client/views/user/register.html
+++ b/client/views/user/register.html
@@ -2,6 +2,7 @@
   <header class="header">
     <div class="container">
       <h1 class="header__title">Registrar-se</h1>
+      <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
     </div>
   </header>
 
@@ -27,10 +28,6 @@
           <input class="btn form__btn" type="submit" value="Registrar">
         </div>
       </form>
-
-      <div class="form__links">
-        <a href="/login">Entrar</a>
-      </div>
     </div>
   </main>
 </template>
