--- a/client/views/training/index.html
+++ b/client/views/training/index.html
@@ -2,8 +2,7 @@
   <header class="header">
     <div class="container">
       <h1 class="header__title">Treinamentos</h1>
-
-      {{> nav}}
+      <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
     </div>
   </header>
 
@@ -21,7 +20,7 @@
 
       {{#if admin}}
       <footer class="footer">
-        <a class="btn" href="/training/create">Adicionar Treinamento</a>
+        <a class="btn" href="/training/{{practitionerId}}/create">Adicionar Treinamento</a>
       </footer>
       {{/if}}
     </div>
