Changing operation of the app for best experience

--- a/client/views/routine/show.html
+++ b/client/views/routine/show.html
@@ -31,9 +31,11 @@
         {{/each}}
       </ol>
 
+      {{#if admin}}
       <footer class="footer">
         <a class="btn" href="/routine-exercise/create/{{_id}}">Adicionar Exercício</a>
       </footer>
+      {{/if}}
     </div>
   </main>
 </template>
