--- a/client/views/training/search.html
+++ b/client/views/training/search.html
@@ -1,8 +1,8 @@
 <template name="trainingSearch">
   <header class="header">
     <div class="container">
-      <h1 class="header__title">Escolha um usuário</h1>
-      
+      <h1 class="header__title">Escolha um praticante</h1>
+
       {{> nav}}
     </div>
   </header>
@@ -11,7 +11,7 @@
     <div class="container">
       <form class="form form--search">
         <div class="form__field">
-          <label class="form__label" for="search">Filtrar usuários</label>
+          <label class="form__label" for="search">Filtrar praticantes</label>
           <input class="form__input input--search" name="search" id="search" type="search" required>
         </div>
       </form>
