--- a/client/views/training/show.html
+++ b/client/views/training/show.html
@@ -31,9 +31,11 @@
         {{/each}}
       </ol>
 
+      {{#if admin}}
       <footer class="footer">
         <a class="btn" href="/routine/create/{{_id}}">Adicionar Rotina</a>
       </footer>
+      {{/if}}
     </div>
   </main>
 </template>
