--- a/client/stylesheets/components/_form.scss
+++ b/client/stylesheets/components/_form.scss
@@ -35,6 +35,7 @@
   padding: 0 .8rem;
 
   outline: none;
+  box-sizing: border-box !important;
 
   &:focus {
     border-color: darken($white, 30%);
