Changing operation of the app for best experience

--- a/client/views/exercise/index.html
+++ b/client/views/exercise/index.html
@@ -20,7 +20,7 @@
       </ul>
 
       <footer class="footer">
-        <a class="btn" href="/exercise/create">Adicionar</a>
+        <a class="btn" href="/exercise/create">Adicionar Exercício</a>
       </footer>
     </div>
   </main>
