--- a/client/views/prop/index.html
+++ b/client/views/prop/index.html
@@ -20,7 +20,7 @@
       </ul>
 
       <footer class="footer">
-        <a class="btn" href="/prop/create">Adicionar</a>
+        <a class="btn" href="/prop/create">Adicionar Equipamento</a>
       </footer>
     </div>
   </main>
