--- a/client/views/training/index.html
+++ b/client/views/training/index.html
@@ -2,8 +2,12 @@
   <header class="header">
     <div class="container">
       <h1 class="header__title">Treinamentos</h1>
-      
-      {{> nav}}
+
+      {{#if admin}}
+        <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
+      {{else}}
+        {{> nav}}
+      {{/if}}
     </div>
   </header>
 
