--- a/client/views/routine/show.html
+++ b/client/views/routine/show.html
@@ -5,7 +5,7 @@
 
       <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
 
-      {{#if admin}}
+      {{#if authorized 2}}
       <a class="nav__btn nav__btn--right nav-action__btn--open ion-android-more-vertical" href="#"></a>
 
       <div class="nav-action">
@@ -31,7 +31,7 @@
         {{/each}}
       </ol>
 
-      {{#if admin}}
+      {{#if authorized 2}}
       <footer class="footer">
         <a class="btn" href="/routine-exercise/create/{{_id}}">Adicionar Exercício</a>
       </footer>
