--- a/client/views/exercise/index.html
+++ b/client/views/exercise/index.html
@@ -2,7 +2,6 @@
   <header class="header">
     <div class="container">
       <h1 class="header__title">Exercícios</h1>
-
       {{> nav}}
     </div>
   </header>
@@ -13,7 +12,7 @@
         {{#each exercises}}
         <li class="list__item">
           <a class="list__link {{checkStatus status}}" href="/exercise/edit/{{_id}}">
-            {{name}} - {{propObj.name}}
+            {{name}}
           </a>
         </li>
         {{/each}}
