Better performance and UX fixes

--- a/client/views/muscle/edit.html
+++ b/client/views/muscle/edit.html
@@ -31,7 +31,7 @@
       <form class="form form--edit" action="post">
         <div class="form__field">
           <label class="form__label" for="name">Nome</label>
-          <input class="form__input" type="text" id="name" name="name" value="{{muscle.name}}" required autofocus>
+          <input class="form__input" type="text" id="name" name="name" value="{{muscle.name}}" required>
         </div>
 
         <div class="form__submit">
