--- a/client/views/routine_exercise/create.html
+++ b/client/views/routine_exercise/create.html
@@ -13,7 +13,7 @@
 
         <div class="form__field">
           <label class="form__label" for="name">Exercício</label>
-          <select class="form__select" name="exercise" id="exercise" required autofocus>
+          <select class="form__select" name="exercise" id="exercise" required>
             {{#each exercises}}
               <option value="{{_id}}">{{name}}</option>
             {{/each}}
