--- a/client/views/training/create.html
+++ b/client/views/training/create.html
@@ -13,7 +13,7 @@
 
         <div class="form__field">
           <label class="form__label" for="description">Descrição</label>
-          <input class="form__input" type="text" name="description" id="description" required autofocus>
+          <input class="form__input" type="text" name="description" id="description" required>
         </div>
 
         <div class="form__submit">
