--- a/client/views/training/edit.html
+++ b/client/views/training/edit.html
@@ -34,7 +34,7 @@
 
         <div class="form__field">
           <label class="form__label" for="description">Descrição</label>
-          <input class="form__input" type="text" name="description" id="description" value="{{training.description}}" required autofocus>
+          <input class="form__input" type="text" name="description" id="description" value="{{training.description}}" required>
         </div>
 
         <div class="form__submit">
