--- a/client/views/user/recovery.html
+++ b/client/views/user/recovery.html
@@ -12,7 +12,7 @@
         <form class="form form--recovery" action="post">
           <div class="form__field">
             <label class="form__label" for="password">Nova senha</label>
-            <input class="form__input" type="password" name="password" id="password" required autofocus>
+            <input class="form__input" type="password" name="password" id="password" required>
           </div>
 
           <div class="form__submit">
@@ -23,7 +23,7 @@
         <form class="form form--send" action="post">
           <div class="form__field">
             <label class="form__label" for="email">E-mail</label>
-            <input class="form__input" type="email" name="email" id="email" required autofocus>
+            <input class="form__input" type="email" name="email" id="email" required>
           </div>
 
           <div class="form__submit">
