--- a/client/views/user/register.html
+++ b/client/views/user/register.html
@@ -11,7 +11,7 @@
       <form class="form form--register" action="post">
         <div class="form__field">
           <label class="form__label" for="name">Nome</label>
-          <input class="form__input" type="text" name="name" id="name" required autofocus>
+          <input class="form__input" type="text" name="name" id="name" required>
         </div>
 
         <div class="form__field">
