--- a/client/views/muscle/create.html
+++ b/client/views/muscle/create.html
@@ -11,7 +11,7 @@
       <form class="form form--create" action="post">
         <div class="form__field">
           <label class="form__label" for="name">Nome</label>
-          <input class="form__input" type="text" id="name" name="name" required autofocus>
+          <input class="form__input" type="text" id="name" name="name" required>
         </div>
 
         <div class="form__submit">
