--- a/client/views/user/edit.html
+++ b/client/views/user/edit.html
@@ -11,7 +11,7 @@
       <form class="form form--edit" action="post">
         <div class="form__field">
           <label class="form__label" for="name">Nome</label>
-          <input class="form__input" type="text" id="name" name="name" value="{{user.profile.name}}" required autofocus>
+          <input class="form__input" type="text" id="name" name="name" value="{{user.profile.name}}" required>
         </div>
 
         {{#if authorized 1}}
