--- a/client/views/user/login.html
+++ b/client/views/user/login.html
@@ -10,7 +10,7 @@
       <form class="form form--login" action="post">
         <div class="form__field">
           <label class="form__label" for="email">E-mail</label>
-          <input class="form__input" type="email" name="email" id="email" required autofocus>
+          <input class="form__input" type="email" name="email" id="email" required>
         </div>
 
         <div class="form__field">
