Structure fixes and styles and adding informational messages

--- a/client/stylesheets/application.scss
+++ b/client/stylesheets/application.scss
@@ -24,5 +24,6 @@
 @import "components/list";
 @import "components/loading";
 @import "components/logo";
+@import "components/messages";
 @import "components/nav";
 @import "components/reason";
