--- a/client/stylesheets/components/_reason.scss
+++ b/client/stylesheets/components/_reason.scss
@@ -4,7 +4,7 @@
   display: none;
 
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
   z-index: 9000;
 
@@ -14,7 +14,14 @@
   font-size: 1rem;
   text-align: center;
 
-  padding: .6rem;
+  padding: 1rem;
 
   background: lighten($black, 15%);
+}
+
+@include media($screen-md) {
+  .reason {
+    top: 0;
+    bottom: auto;
+  }
 }
