--- a/client/views/exercise/index.html
+++ b/client/views/exercise/index.html
@@ -8,15 +8,24 @@
 
   <main class="main">
     <div class="container">
-      <ul class="list">
-        {{#each exercises}}
-        <li class="list__item">
-          <a class="list__link {{checkStatus status}}" href="/exercise/edit/{{_id}}">
-            {{name}}
-          </a>
-        </li>
-        {{/each}}
-      </ul>
+      {{#if exercises.count}}
+        <ul class="list">
+          {{#each exercises}}
+          <li class="list__item">
+            <a class="list__link {{checkStatus status}}" href="/exercise/edit/{{_id}}">
+              {{name}}
+            </a>
+          </li>
+          {{/each}}
+        </ul>
+      {{else}}
+        <div class="messages">
+          <h1 class="messages__title">Opa!</h1>
+          <div class="messages__text">
+            <p>Ainda não existe nenhum <strong>exercício</strong> cadastrado.</p>
+          </div>
+        </div>
+      {{/if}}
 
       <footer class="footer">
         <a class="btn" href="/exercise/create">Adicionar Exercício</a>
