--- a/client/views/training/index.html
+++ b/client/views/training/index.html
@@ -13,15 +13,25 @@
 
   <main class="main">
     <div class="container">
-      <ul class="list">
-        {{#each trainings}}
-        <li class="list__item">
-          <a class="list__link {{checkStatus status}}" href="/training/show/{{_id}}">
-            {{description}}
-          </a>
-        </li>
-        {{/each}}
-      </ul>
+      {{#if trainings.count}}
+        <ul class="list">
+          {{#each trainings}}
+          <li class="list__item">
+            <a class="list__link {{checkStatus status}}" href="/training/show/{{_id}}">
+              {{description}}
+            </a>
+          </li>
+          {{/each}}
+        </ul>
+      {{else}}
+        <div class="messages">
+          <h1 class="messages__title">Opa!</h1>
+          <div class="messages__text">
+            <p>Você ainda não possui nenhum <strong>treinamento</strong>.</p>
+            <p>Aguarde seu instrutor para começar!</p>
+          </div>
+        </div>
+      {{/if}}
 
       {{#if authorized 2}}
       <footer class="footer">
