Adicionando upload de imagens para usuários

--- a/client/stylesheets/application.scss
+++ b/client/stylesheets/application.scss
@@ -21,6 +21,7 @@
 // components
 @import "components/btn";
 @import "components/form";
+@import "components/icon";
 @import "components/list";
 @import "components/loading";
 @import "components/logo";
