--- a/client/stylesheets/components/_form.scss
+++ b/client/stylesheets/components/_form.scss
@@ -20,7 +20,7 @@
   margin: 0 0 .25rem;
 }
 
-%field {
+%fields {
   display: block;
   width: 100%;
   height: 3rem;
@@ -44,20 +44,24 @@
 }
 
 .form__input {
-  @extend %field;
+  @extend %fields;
   line-height: 3rem;
   @include appearance(none);
 }
 
+.form__input--hidden {
+  display: none;
+}
+
 .form__select {
-  @extend %field;
+  @extend %fields;
   line-height: 2rem;
   @include appearance(none);
 }
 
 .form__textarea {
   line-height: 2rem;
-  @extend %field;
+  @extend %fields;
 }
 
 
@@ -89,6 +93,12 @@
   position: absolute;
   top: 1rem;
   left: 1rem;
+}
+
+
+.form__btn--upload {
+  @extend %fields;
+  text-align: center;
 }
 
 
