--- a/client/views/user/profile.html
+++ b/client/views/user/profile.html
@@ -20,6 +20,12 @@
     <div class="container">
       <section class="section">
         <div class="section__group">
+          <figure class="section__figure">
+            <img class="section__image" src="/cfs/files/userImages/{{ user.profile.image }}" alt="{{user.profile.name}}">
+          </figure>
+        </div>
+
+        <div class="section__group">
           <h2 class="section__title">{{user.profile.name}}</h2>
 
           <div class="section__text">
