--- a/client/stylesheets/components/_btn.scss
+++ b/client/stylesheets/components/_btn.scss
@@ -1,6 +1,8 @@
 // btn
 
 .btn {
+  outline: none;
+
   display: block;
   width: 100%;
   height: 3.5rem;
@@ -14,13 +16,13 @@
   text-transform: uppercase;
 
   border: 0;
-  background: lighten($black, 20%);
+  background: lighten($black, 15%);
 
   @include transition(.1s ease);
 
   &:hover,
   &:focus {
-    background: lighten($black, 15%);
+    background: lighten($black, 10%);
   }
 }
 
