--- a/client/stylesheets/components/_reason.scss
+++ b/client/stylesheets/components/_reason.scss
@@ -1,27 +1,34 @@
 // reason
 
 .reason {
-  display: none;
-
   position: fixed;
   bottom: 0;
   left: 0;
   z-index: 9000;
 
+  display: block;
   width: 100%;
+  line-height: 3.5rem;
 
   color: $white;
   font-size: 1rem;
   text-align: center;
 
-  padding: 1rem;
+  @include transform(translateY(3.5rem));
+  @include transition(.15s ease);
 
-  background: lighten($black, 15%);
+  background: $primary;
+}
+
+.reason--active {
+  @include transform(translateY(0));
 }
 
 @include media($screen-md) {
   .reason {
-    top: 0;
-    bottom: auto;
+    height: 4rem;
+    line-height: 4rem;
+
+    @include transform(translateY(4rem));
   }
 }
