--- a/client/views/user/edit.html
+++ b/client/views/user/edit.html
@@ -8,16 +8,16 @@
 
   <main class="main">
     <div class="container">
+      <div class="form__field">
+        <label class="form__label" for="image">Imagem</label>
+        <input class="form__input--hidden images" type="file" id="image" name="image" required>
+
+        <button class="form__btn--upload">
+          Enviar imagem <span class="icon--right ion-upload"></span>
+        </button>
+      </div>
+      
       <form class="form form--edit" action="post">
-        <div class="form__field">
-          <label class="form__label" for="image">Imagem</label>
-          <input class="form__input--hidden" type="file" id="image" name="image" required>
-
-          <button class="form__btn--upload">
-            Enviar imagem <span class="icon--right ion-upload"></span>
-          </button>
-        </div>
-
         <div class="form__field">
           <label class="form__label" for="name">Nome</label>
           <input class="form__input" type="text" id="name" name="name" value="{{user.profile.name}}" required>
