--- a/client/views/user/profile.html
+++ b/client/views/user/profile.html
@@ -20,13 +20,13 @@
     <div class="container">
       <section class="section">
         <div class="section__group">
-          <figure class="section__figure">
+          <figure class="section__figure section__figure--rounded">
             <img class="section__image" src="/cfs/files/userImages/{{ user.profile.image }}" alt="{{user.profile.name}}">
           </figure>
         </div>
 
         <div class="section__group">
-          <h2 class="section__title">{{user.profile.name}}</h2>
+          <h2 class="section__caption">{{user.profile.name}}</h2>
 
           <div class="section__text">
             <p>
