--- a/client/views/exercise/create.html
+++ b/client/views/exercise/create.html
@@ -16,7 +16,7 @@
           Enviar imagem <span class="icon--right ion-upload"></span>
         </button>
       </div>
-      
+
       <form class="form form--create" action="post">
         <div class="form__field">
           <label class="form__label" for="name">Nome</label>
@@ -24,12 +24,14 @@
         </div>
 
         <div class="form__field">
-          <label class="form__label" for="prop">Equipamento</label>
-          <select class="form__select" name="prop" id="prop">
-            {{#each props}}
-              <option value="{{_id}}">{{name}}</option>
-            {{/each}}
-          </select>
+          <label class="form__label" for="props">Equipamento</label>
+
+          {{#each props}}
+          <div class="form-checkbox">
+            <input class="form-checkbox__input props" type="checkbox" name="prop" id="{{_id}}" value="{{_id}}">
+            <label class="form-checkbox__label" for="{{_id}}">{{name}}</label>
+          </div>
+          {{/each}}
         </div>
 
         <div class="form__field">
