--- a/client/views/training/search.html
+++ b/client/views/training/search.html
@@ -18,8 +18,16 @@
 
       <ol class="list list--users">
         {{#each users}}
-        <li class="list__item">
-          <a class="list__link {{checkStatus profile.status}}" href="/training/{{_id}}">{{profile.name}}</a>
+        <li class="list__item list__item--figured">
+          <a class="list__link {{checkStatus profile.status}}" href="/training/{{_id}}">
+            <figure class="list__figure">
+              {{#if image profile.image }}
+                <img class="list__image" src="/cfs/files/userImages/{{ profile.image }}" alt="{{ profile.name }}">
+              {{/if}}
+            </figure>
+
+            {{profile.name}}
+          </a>
         </li>
         {{/each}}
       </ol>
