--- a/client/views/user/profile.html
+++ b/client/views/user/profile.html
@@ -21,7 +21,9 @@
       <section class="section">
         <div class="section__group">
           <figure class="section__figure section__figure--rounded">
-            <img class="section__image" src="/cfs/files/userImages/{{ user.profile.image }}" alt="{{user.profile.name}}">
+            {{#if image user.profile.image }}
+              <img class="section__image" src="/cfs/files/userImages/{{ user.profile.image }}" alt="{{user.profile.name}}">
+            {{/if}}
           </figure>
         </div>
 
