--- a/client/views/exercise/create.html
+++ b/client/views/exercise/create.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form__field">
-          <label class="form__label" for="props">Equipamento</label>
+          <label class="form__label" for="props">Equipamentos</label>
 
           {{#each props}}
           <div class="form-checkbox">
