--- a/client/views/routine_exercise/show.html
+++ b/client/views/routine_exercise/show.html
@@ -48,7 +48,7 @@
           </div>
 
           <div class="section__group">
-            <h2 class="section__caption">Equipamento</h2>
+            <h2 class="section__caption">Equipamento(s)</h2>
 
             <div class="section__text">
               <ul>
@@ -63,7 +63,7 @@
             <div class="section__group">
               <h2 class="section__caption">Séries</h2>
 
-              <div class="section__text">
+              <div class="section__text section__text--big">
                 <p>
                   {{routineExercise.sets}}
                 </p>
@@ -73,7 +73,7 @@
             <div class="section__group">
               <h2 class="section__caption">Repetições</h2>
 
-              <div class="section__text">
+              <div class="section__text section__text--big">
                 <p>
                   {{routineExercise.reps}}
                 </p>
