Fixes structure and styles

--- a/client/stylesheets/components/_list.scss
+++ b/client/stylesheets/components/_list.scss
@@ -41,7 +41,10 @@
 }
 
 .list__image {
-  width: 100%;
+  position: relative;
+  left: 50%;
+  height: 100%;
+  @include transform(translateX(-50%));
 }
 
 .list__link {
