--- a/client/views/training/search.html
+++ b/client/views/training/search.html
@@ -12,7 +12,7 @@
       <form class="form form--search">
         <div class="form__field">
           <label class="form__label" for="search">Filtrar praticantes</label>
-          <input class="form__input input--search" name="search" id="search" type="search" required>
+          <input class="form__input input--search" name="search" id="search" type="search" autocomplete="off" required>
         </div>
       </form>
 
