--- a/client/views/user/list.html
+++ b/client/views/user/list.html
@@ -11,7 +11,7 @@
       <form class="form form--search">
         <div class="form__field">
           <label class="form__label" for="search">Filtrar usuários</label>
-          <input class="form__input input--search" name="search" id="search" type="search" required>
+          <input class="form__input input--search" name="search" id="search" type="search" autocomplete="off" required>
         </div>
       </form>
 
