--- a/client/views/exercise/create.html
+++ b/client/views/exercise/create.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="form__field">
         <label class="form__label" for="image">Imagem</label>
-        <input class="form__input--hidden images" type="file" id="image" name="image" multiple required>
+        <input class="form__input--hidden images" type="file" id="image" name="image" accept="image/*" multiple>
 
         <button class="form__btn--upload">
           Enviar imagem <span class="icon--right ion-upload"></span>
