--- a/client/stylesheets/application.scss
+++ b/client/stylesheets/application.scss
@@ -26,5 +26,6 @@
 @import "components/loading";
 @import "components/logo";
 @import "components/messages";
+@import "components/modal";
 @import "components/nav";
 @import "components/reason";
