--- a/client/views/training/show.html
+++ b/client/views/training/show.html
@@ -3,7 +3,11 @@
     <div class="container">
       <h1 class="header__title">{{training.description}}</h1>
 
-      <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
+      {{#if execution training.execution 1}}
+        <a class="nav__btn nav__btn--left execution__btn--finalize ion-android-done" href="#"></a>
+      {{else}}
+        <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
+      {{/if}}
 
       {{#if authorized 2}}
       <a class="nav__btn nav__btn--right nav-action__btn--open ion-android-more-vertical" href="#"></a>
@@ -50,5 +54,19 @@
       </footer>
       {{/if}}
     </div>
+
+    {{#if execution training.execution 0}}
+    <section class="modal modal--active">
+      <div class="modal__content">
+        <h1 class="modal__title">Treino {{training.description}}</h1>
+        <h2 class="modal__caption">Bora treinar?</h2>
+        <a class="modal__btn execution__btn--initial" href="#">Iniciar</a>
+      </div>
+
+      <div class="modal__footer">
+        <a class="modal__link modal__link--close" href="#">Agora não</a>
+      </div>
+    </section>
+    {{/if}}
   </main>
 </template>
