--- a/client/stylesheets/components/_nav.scss
+++ b/client/stylesheets/components/_nav.scss
@@ -42,7 +42,7 @@
   line-height: 3.5rem;
 
   color: $white;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   text-align: center;
 
   @include transition(.15s ease);
@@ -63,6 +63,17 @@
   position: absolute;
   top: 0;
   right: 0;
+}
+
+.nav__btn--full {
+  width: 100%;
+
+  font-size: 1rem;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+
+  padding: 0 1rem;
 }
 
 .nav__list {
@@ -172,6 +183,10 @@
     width: 4rem;
     height: 4rem;
     line-height: 4rem;;
+  }
+
+  .nav__btn--full {
+    width: 100%;
   }
 
   .nav__item {
