--- a/client/views/training/show.html
+++ b/client/views/training/show.html
@@ -3,9 +3,7 @@
     <div class="container">
       <h1 class="header__title">{{training.description}}</h1>
 
-      {{#if execution training.execution 1}}
-        <a class="nav__btn nav__btn--left execution__btn--finalize ion-android-done" href="#"></a>
-      {{else}}
+      {{#if execution training.execution 0}}
         <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
       {{/if}}
 
@@ -29,8 +27,12 @@
         <ol class="list">
           {{#each training.routinesObj}}
             <li class="list__item">
-              <a class="list__link {{checkStatus status}}" href="/routine/show/{{_id}}">
+              <a class="list__link {{checkStatus status}} {{checkDone done}}" href="/routine/show/{{_id}}">
                 {{description}}
+
+                {{#if done}}
+                  <span class="icon--right ion-android-done"></span>
+                {{/if}}
               </a>
             </li>
           {{/each}}
@@ -49,9 +51,17 @@
       {{/if}}
 
       {{#if authorized 2}}
-      <footer class="footer">
-        <a class="btn" href="/routine/create/{{_id}}">Adicionar Rotina</a>
-      </footer>
+        <footer class="footer">
+          <a class="btn" href="/routine/create/{{_id}}">Adicionar Rotina</a>
+        </footer>
+      {{else}}
+        <footer class="footer">
+          {{#if execution training.execution 0}}
+            <a class="btn execution__btn--initial" href="#">Iniciar</a>
+          {{else}}
+            <a class="btn btn--secondary execution__btn--finalize" href="#">Finalizar</a>
+          {{/if}}
+        </footer>
       {{/if}}
     </div>
 
@@ -61,10 +71,6 @@
         <h1 class="modal__title">Treino {{training.description}}</h1>
         <h2 class="modal__caption">Bora treinar?</h2>
         <a class="modal__btn execution__btn--initial" href="#">Iniciar</a>
-      </div>
-
-      <div class="modal__footer">
-        <a class="modal__link modal__link--close" href="#">Agora não</a>
       </div>
     </section>
     {{/if}}
